--- a/PA.Plugin.Threads.csproj
+++ b/PA.Plugin.Threads.csproj
@@ -14,7 +14,6 @@
     <UpgradeBackupLocation />
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <ReleaseVersion>4.0</ReleaseVersion>
   </PropertyGroup>
@@ -142,4 +141,5 @@
     </PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(SolutionDir)\.build\Extra.targets" />
 </Project>
