--- a/PA.Plugin.Threads.nuspec
+++ b/PA.Plugin.Threads.nuspec
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
+    <id>PA.Plugin.Threads</id>
+    <version>4.0.5462-b48439-develop</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
