--- a/PA.Plugin.Threads.csproj
+++ b/PA.Plugin.Threads.csproj
@@ -16,6 +16,7 @@
     <TargetFrameworkProfile />
     <RestorePackages>true</RestorePackages>
     <ReleaseVersion>4.4.1</ReleaseVersion>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
